--- a/public/index.html
+++ b/public/index.html
@@ -15,6 +15,7 @@
       user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
     -->
     <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
     <!--
       Notice the use of %PUBLIC_URL% in the tags above.
       It will be replaced with the URL of the `public` folder during the build.
@@ -24,20 +25,18 @@
       work correctly both with client-side routing and a non-root public URL.
       Learn how to configure a non-root public URL by running `npm run build`.
     -->
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Hind:wght@300;400;500;600&family=Lexend+Deca:wght@300;400;500;600&family=Oswald:wght@300;400;500;600;700&family=Akshar:wght@400;500;600;700&family=Alef&family=Alegreya+Sans+SC:ital,wght@0,300;0,400;0,500;0,700;1,300&family=Dongle:wght@400;700&family=Edu+VIC+WA+NT+Beginner:wght@400;500;600&family=Germania+One&family=Heebo:wght@200;300;400;500;600&family=Inter:wght@200;300;400;500;600;700&family=Lato:wght@700&family=Metal+Mania&family=Noto+Sans:ital,wght@0,400;0,600;0,700;1,400&family=Open+Sans:ital,wght@0,300;0,400;0,500;0,600;0,700;1,300;1,400;1,500&family=Playfair+Display+SC:ital,wght@0,400;0,700;1,400;1,700&family=Quicksand:wght@400;500;600&family=Roboto&family=Rouge+Script&family=Ruda&family=Ruluko&display=swap" rel="stylesheet">
+    <script src='https://kit.fontawesome.com/a076d05399.js' crossorigin='anonymous'></script>
+
     <title>React App</title>
   </head>
-  <body>
+  <body style="margin: 0%;padding: 0%;background: linear-gradient(rgb(41, 40, 40), black 60%);height: 100%;">
     <noscript>You need to enable JavaScript to run this app.</noscript>
     <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
-
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
-
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
+    
+  
+</div>
+    
   </body>
 </html>
